fix: fix horizontal viewport to prevent horizontal scrolling

--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -51,7 +51,9 @@ html, body {
 
 #wrapper {
   height: 100vh;
+  width: 100vw;
   overflow-y: auto;
+  overflow-x: hidden;
   scrollbar-width: thin;
   scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
   
