--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -27,10 +27,10 @@
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
+			overflow-x: hidden;
 			background-color: transparentize(_palette(bg), 0.15);
 			border-radius: _size(border-radius);
-			opacity: 0;
-
+			
 			&.active {
 				@include vendor('transform', 'translateY(0)');
 				opacity: 1;
